--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -26,7 +26,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="{% url 'what-we-do' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Upcoming Events</a>
